compiler-core/src/nix/tests/snapshots/gleam_core__nix__tests__custom_types__const_imported_multiple_fields.snap
---
source: compiler-core/src/nix/tests/custom_types.rs
expression: "import other\npub const main = other.Two(b: 2, c: 3, a: 1)\n"
---
let
  mod''other = builtins.import ./../other.nix;
  
  main = mod''other.Two 1 2 3;
in { inherit main; }
