compiler-core/src/nix/tests/snapshots/gleam_core__nix__tests__custom_types__const_imported_no_label.snap
---
source: compiler-core/src/nix/tests/custom_types.rs
expression: "import other\npub const main = other.Two(1)\n"
---
let
  mod''other = builtins.import ./../other.nix;
  
  main = mod''other.Two 1;
in { inherit main; }
