compiler-core/src/nix/tests/snapshots/gleam_core__nix__tests__custom_types__const_unqualified_imported_ignoring_label.snap
---
source: compiler-core/src/nix/tests/custom_types.rs
expression: "import other.{Two}\npub const main = Two(1)\n"
---
let
  mod''other = builtins.import ./../other.nix;
  inherit (builtins.import ./../other.nix) Two;
  
  main = Two 1;
in { inherit main; }
