compiler-core/src/nix/tests/snapshots/gleam_core__nix__tests__custom_types__const_unqualified_imported_multiple_fields.snap
---
source: compiler-core/src/nix/tests/custom_types.rs
expression: "import other.{Two}\npub const main = Two(b: 2, c: 3, a: 1)\n"
---
let
  mod''other = builtins.import ./../other.nix;
  inherit (builtins.import ./../other.nix) Two;
  
  main = Two 1 2 3;
in { inherit main; }
