compiler-core/src/nix/tests/snapshots/gleam_core__nix__tests__custom_types__const_zero_arity_imported.snap
---
source: compiler-core/src/nix/tests/custom_types.rs
expression: "import other\nconst x = other.Two\n"
---
let mod''other = builtins.import ./../other.nix; x = mod''other.Two; in {}
