compiler-core/src/nix/tests/snapshots/gleam_core__nix__tests__custom_types__constructor_as_value.snap
---
source: compiler-core/src/nix/tests/custom_types.rs
expression: "import other\npub fn main() {\n  other.Two\n}"
---
let
  other' = builtins.import ./../other.nix;
  
  main = {}: other'.Two;
in { inherit main; }
