compiler-core/src/nix/tests/snapshots/gleam_core__nix__tests__custom_types__destructure_custom_type_with_named_fields.snap
---
source: compiler-core/src/nix/tests/custom_types.rs
expression: "\ntype Cat {\n  Cat(name: String, cuteness: Int)\n}\n\nfn go(cat) {\n  let Cat(x, y) = cat\n  let Cat(name: x, ..) = cat\n  let assert Cat(cuteness: 4, name: x) = cat\n  x\n}\n\n"
---
let
  Cat = name: cuteness: { __gleamTag = "Cat"; inherit name cuteness; };
  
  go =
    cat:
      let
        x = cat.name;
        y = cat.cuteness;
        x'1 = cat.name;
        _assert' =
          if cat.__gleamTag != "Cat" || cat.cuteness != 4
          then builtins.throw "Assignment pattern did not match"
          else null;
        x'2 = builtins.seq _assert' cat.name;
      in builtins.seq _assert' x'2;
in {}
